# gfx_template

./: .gitignore  CMakeLists.txt  camera.cpp  camera.h  compile.sh  fragment.glsl  fudge_run.sh  gl_helpers.cpp  gl_helpers.h  input.cpp  input.h  main.cpp  planets.h  readme.txt  shapes.cpp  shapes.h  types.h  vertex.glsl
jeremy/TorusFinished/: boilerplate  camera.cpp  camera.h  fragment.glsl  main.cpp  makefile  vertex.glsl
textures/: TextureSource.txt
